--- a/Algorithms_And_Problem_Solving/Level_3/Ex-09/Ex-09.vcxproj.filters
+++ b/Algorithms_And_Problem_Solving/Level_3/Ex-09/Ex-09.vcxproj.filters
@@ -17,4 +17,9 @@
   <ItemGroup>
     <None Include="readme.md" />
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="Ex-09.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
 </Project>
