--- a/Algorithms_And_Problem_Solving/Level_3/Ex-09/Ex-09.vcxproj
+++ b/Algorithms_And_Problem_Solving/Level_3/Ex-09/Ex-09.vcxproj
@@ -129,6 +129,9 @@
   <ItemGroup>
     <None Include="readme.md" />
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="Ex-09.cpp" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
